fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Extng_Tip_Conf_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Extng_Tip_Conf_Other_Text__c</fullName>
    <label>Extng Tip Conf - Other Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>