fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Extra_clamps_needed_if_so_where_stored__c.field-meta.xml
<CustomField>
    <fullName>Extra_clamps_needed_if_so_where_stored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are extra clamps needed; if so where they will be stored?</description>
    <inlineHelpText>Are extra clamps needed; if so where they will be stored?</inlineHelpText>
    <label>Extra clamps needed; if so where stored?</label>
    <type>Checkbox</type>
</CustomField>