fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Extra_Stylets_in_inventory__c.field-meta.xml
<CustomField>
    <fullName>Extra_Stylets_in_inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Extra Stylets in inventory</description>
    <inlineHelpText>Extra Stylets in inventory</inlineHelpText>
    <label>Extra Stylets in inventory</label>
    <type>Checkbox</type>
</CustomField>