fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Fluoro__c.field-meta.xml
<CustomField>
    <fullName>Fluoro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fluoro</label>
    <type>Checkbox</type>
</CustomField>