fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Gauge_French__c.field-meta.xml
<CustomField>
    <fullName>Gauge_French__c</fullName>
    <label>*Gauge/French</label>
    <length>55</length>
    <type>Text</type>
</CustomField>