fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/GlideThru_Sheath_brochure__c.field-meta.xml
<CustomField>
    <fullName>GlideThru_Sheath_brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GlideThru Sheath brochure</description>
    <inlineHelpText>GlideThru Sheath brochure</inlineHelpText>
    <label>GlideThru Sheath brochure</label>
    <type>Checkbox</type>
</CustomField>