fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/GlideThru_Sheath_Placement__c.field-meta.xml
<CustomField>
    <fullName>GlideThru_Sheath_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GlideThru® Sheath: reduces need for skin nick - Placement: choke up and twist
PICC, Midline
Trial/Evaluation Stage
Evaluation Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</description>
    <inlineHelpText>GlideThru® Sheath: reduces need for skin nick - Placement: choke up and twist
PICC, Midline
Trial/Evaluation Stage
Evaluation Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</inlineHelpText>
    <label>GlideThru Sheath - Placement</label>
    <type>Checkbox</type>
</CustomField>