fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/GlideThru_Sheath_Removal__c.field-meta.xml
<CustomField>
    <fullName>GlideThru_Sheath_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GlideThru® Sheath: reduces need for skin nick - Removal: Pull Peel Push
PICC, Midline
Trial/Evaluation Stage
(Evaluation) Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</description>
    <inlineHelpText>GlideThru® Sheath: reduces need for skin nick - Removal: Pull Peel Push
PICC, Midline
Trial/Evaluation Stage
(Evaluation) Go Live/Clinical
Provide Clinical Education, Demo and Practice Prior to Going Bedside for:</inlineHelpText>
    <label>GlideThru Sheath - Removal</label>
    <type>Checkbox</type>
</CustomField>