fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Goal_2_Integrate_product_w_least_amt__c.field-meta.xml
<CustomField>
    <fullName>Goal_2_Integrate_product_w_least_amt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Goal#2-Integrate prod. w/least amt. of change 2 curr insertion proc</description>
    <inlineHelpText>Goal #2 – integrate product with the least amount of change as possible to their current insertion procedure</inlineHelpText>
    <label>Goal#2-Integrate product w/least amt...</label>
    <type>Checkbox</type>
</CustomField>