fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/GPO_IDN_Membership__c.field-meta.xml
<CustomField>
    <fullName>GPO_IDN_Membership__c</fullName>
    <label>GPO/IDN Membership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>