fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/GPOIDN__c.field-meta.xml
<CustomField>
    <fullName>GPOIDN__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Main_GPO__c)&amp;&quot; &quot;&amp; &quot;/&quot;&amp;&quot; &quot;&amp; Opportunity__r.Account.IDN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO/IDN</label>
    <type>Text</type>
</CustomField>