fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Guidelines_to_prevent_arterial_infection__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_to_prevent_arterial_infection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Guidelines: What guidelines are they currently utilizing for arterial infection prevention?</description>
    <inlineHelpText>Guidelines: What guidelines are they currently utilizing for arterial infection prevention?</inlineHelpText>
    <label>Guidelines to prevent arterial infection</label>
    <type>Checkbox</type>
</CustomField>