fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/HDYrlyVolume__c.field-meta.xml
<CustomField>
    <fullName>HDYrlyVolume__c</fullName>
    <description>Current Manufacture HD/Yrly Volume</description>
    <inlineHelpText>Current Manufacture HD/Yrly Volume</inlineHelpText>
    <label>HD/Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>