fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Hospital_Policy_On_Equipment_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Policy_On_Equipment_Disposal__c</fullName>
    <label>Hospital Policy On Equipment Disposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment vendor removes and disposes</fullName>
            </value>
            <value>
                <fullName>Hospital Disposes of Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>