fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Hospital_SAP__c.field-meta.xml
<CustomField>
    <fullName>Hospital_SAP__c</fullName>
    <formula>Opportunity__r.Account.SAP_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital SAP #</label>
    <type>Text</type>
</CustomField>