fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/How_are_CXRs_currently_read__c.field-meta.xml
<CustomField>
    <fullName>How_are_CXRs_currently_read__c</fullName>
    <description>How are CXRs currently read?</description>
    <inlineHelpText>How are CXRs currently read?</inlineHelpText>
    <label>How are CXRs currently read?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>