fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/How_does_your_facility_define_a_midline__c.field-meta.xml
<CustomField>
    <fullName>How_does_your_facility_define_a_midline__c</fullName>
    <description>Vetting - How does your facility define a midline? INS standard</description>
    <inlineHelpText>Vetting - How does your facility define a midline? INS standard</inlineHelpText>
    <label>How does your facility define a midline?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>