fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/How_staff_identify_diff_VAD_in_facility__c.field-meta.xml
<CustomField>
    <fullName>How_staff_identify_diff_VAD_in_facility__c</fullName>
    <description>Vetting - How does the staff identify different Vascular Access Devices in your facility (Example: PICC versus midline)? Sign above HOB, wrist band, dressing label, catheter label, other</description>
    <inlineHelpText>Vetting - How does the staff identify different Vascular Access Devices in your facility (Example: PICC versus midline)? Sign above HOB, wrist band, dressing label, catheter label, other</inlineHelpText>
    <label>How staff identify diff VAD in facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>