fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/How_supplies_gathered__c.field-meta.xml
<CustomField>
    <fullName>How_supplies_gathered__c</fullName>
    <description>How are they currently gathering their supplies for arterial insertions?</description>
    <inlineHelpText>How are they currently gathering their supplies for arterial insertions?</inlineHelpText>
    <label>How supplies gathered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don’t Use Other Supplies</fullName>
            </value>
            <value>
                <fullName>Pre-Assembles Supplies</fullName>
            </value>
            <value>
                <fullName>Purchase Pre-Assembled Kit from Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>