fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/How_will_they_documnt_final_tip_placmnt__c.field-meta.xml
<CustomField>
    <fullName>How_will_they_documnt_final_tip_placmnt__c</fullName>
    <inlineHelpText>How will they document final tip placement?</inlineHelpText>
    <label>How will they documnt final tip placmnt?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>