fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Howismidlinedefined__c.field-meta.xml
<CustomField>
    <fullName>Howismidlinedefined__c</fullName>
    <description>How is midline defined? (INS standard)
Endurance
Needs Analysis
Vetting</description>
    <inlineHelpText>How is midline defined? (INS standard)
Endurance
Needs Analysis
Vetting</inlineHelpText>
    <label>How is midline defined?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>