fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/ICU__c.field-meta.xml
<CustomField>
    <fullName>ICU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICU</label>
    <type>Checkbox</type>
</CustomField>