fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Identify_Data_Collection_process__c.field-meta.xml
<CustomField>
    <fullName>Identify_Data_Collection_process__c</fullName>
    <description>Identify Data Collection process</description>
    <inlineHelpText>Identify Data Collection process</inlineHelpText>
    <label>*Identify Data Collection process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>