fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/If_No_Elaborate_on_plan_with_corp_Acc__c.field-meta.xml
<CustomField>
    <fullName>If_No_Elaborate_on_plan_with_corp_Acc__c</fullName>
    <label>If No, Elaborate on plan with corp Acc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>