fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/If_yes_individual_responsible__c.field-meta.xml
<CustomField>
    <fullName>If_yes_individual_responsible__c</fullName>
    <label>If yes, individual responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>