fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/If_yes_is_a_comprehensive_edu_plan_req__c.field-meta.xml
<CustomField>
    <fullName>If_yes_is_a_comprehensive_edu_plan_req__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If yes, is a comprehensive education plan required?

If yes, consider engaging CEM/RCEM and utilize the below recommendations. If no, rep should consider below rep
recommendations and take into consideration clinical</inlineHelpText>
    <label>If yes, is a comprehensive edu plan req?</label>
    <type>Checkbox</type>
</CustomField>