fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/If_yes_review_criteria_for_specific_prog__c.field-meta.xml
<CustomField>
    <fullName>If_yes_review_criteria_for_specific_prog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If yes review criteria for specific prog</label>
    <type>Checkbox</type>
</CustomField>