fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/If_Yes_what_is_the_timeframe__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_what_is_the_timeframe__c</fullName>
    <label>If Yes, what is the timeframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>