fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Info_for_Radiology_Documents_from_SAM__c.field-meta.xml
<CustomField>
    <fullName>Info_for_Radiology_Documents_from_SAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information for Radiology Documents (from SAM)</description>
    <inlineHelpText>Information for Radiology Documents (from SAM)</inlineHelpText>
    <label>Info for Radiology Document(from ACTO)</label>
    <type>Checkbox</type>
</CustomField>