fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Initiate_SFDC_Education_Req_for_approval__c.field-meta.xml
<CustomField>
    <fullName>Initiate_SFDC_Education_Req_for_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initiate Salesforce.com Education Request for approval</description>
    <inlineHelpText>Initiate Salesforce.com Education Request for approval</inlineHelpText>
    <label>Initiate SFDC Education Req for approval</label>
    <type>Checkbox</type>
</CustomField>