fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Inserter_Education_talk_track__c.field-meta.xml
<CustomField>
    <fullName>Inserter_Education_talk_track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inserter Education talk track (customize template for account – no hospital approval needed)</description>
    <inlineHelpText>Inserter Education talk track (customize template for account – no hospital approval needed)</inlineHelpText>
    <label>Inserter Education talk track</label>
    <type>Checkbox</type>
</CustomField>