fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Inserters_on_Team_NotRequired__c.field-meta.xml
<CustomField>
    <fullName>Inserters_on_Team_NotRequired__c</fullName>
    <label># Inserters on Team</label>
    <length>55</length>
    <type>Text</type>
</CustomField>