fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Insertion_videos_and_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Insertion_videos_and_guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insertion videos and guidelines</label>
    <type>Checkbox</type>
</CustomField>