fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Interested_in_placing_CVC_with_ECG__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_placing_CVC_with_ECG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in placing CVC with ECG</label>
    <type>Checkbox</type>
</CustomField>