fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Interested_in_starting_a_Bedside_Team__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_starting_a_Bedside_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in starting a  Bedside Team</label>
    <type>Checkbox</type>
</CustomField>