fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/IOYrlyAmount__c.field-meta.xml
<CustomField>
    <fullName>IOYrlyAmount__c</fullName>
    <description>Current Manufacture I/O/Yrly Volume</description>
    <inlineHelpText>Current Manufacture I/O/Yrly Volume</inlineHelpText>
    <label>I/O/Yrly Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>