fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/IR__c.field-meta.xml
<CustomField>
    <fullName>IR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IR</label>
    <type>Checkbox</type>
</CustomField>