fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Is_a_Cart_and_or_Printer_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Cart_and_or_Printer_Required__c</fullName>
    <label>Is a Cart and/or Printer Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cart Only</fullName>
            </value>
            <value>
                <fullName>Printer Only</fullName>
            </value>
            <value>
                <fullName>Both Cart and Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>