fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Is_facility_evaluating_other_midlines__c.field-meta.xml
<CustomField>
    <fullName>Is_facility_evaluating_other_midlines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is facility evaluating other midlines?</description>
    <inlineHelpText>Is facility evaluating other midlines?</inlineHelpText>
    <label>Is facility evaluating other midlines?</label>
    <type>Checkbox</type>
</CustomField>