fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Is_significant_practice_change__c.field-meta.xml
<CustomField>
    <fullName>Is_significant_practice_change__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is significant practice change involved with this product evaluation/conversion?</inlineHelpText>
    <label>Is significant practice change...</label>
    <type>Checkbox</type>
</CustomField>