fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Is_the_Vascular_Access_Manager_agrmnt__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Vascular_Access_Manager_agrmnt__c</fullName>
    <description>Is the Vascular Access Manager in agreement?</description>
    <inlineHelpText>Is the Vascular Access Manager in agreement?</inlineHelpText>
    <label>*Is the Vascular Access Manager agrmnt.?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>