fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Is_VAT_MGMT_willing_to_set_expectations__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_MGMT_willing_to_set_expectations__c</fullName>
    <description>Is the VAT Manager willing to set/manage appropriate expectations with PICC team during evaluation (i.e. controlling vocal
competitive supporters)?</description>
    <inlineHelpText>Is the VAT Manager willing to set/manage appropriate expectations with PICC team during evaluation (i.e. controlling vocal
competitive supporters)?</inlineHelpText>
    <label>*Is VAT MGMT willing to set expectations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>