fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/IstheVAManagerinagreement__c.field-meta.xml
<CustomField>
    <fullName>IstheVAManagerinagreement__c</fullName>
    <description>Needs Analysis
Inserter</description>
    <inlineHelpText>Is the Vascular Access Manager in agreement?

Needs Analysis
Inserter</inlineHelpText>
    <label>*Is the VA Manager in agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>