fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/JCAHO__c.field-meta.xml
<CustomField>
    <fullName>JCAHO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JCAHO</label>
    <type>Checkbox</type>
</CustomField>