fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>*Length</label>
    <length>55</length>
    <type>Text</type>
</CustomField>