fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Length_of_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Evaluation__c</fullName>
    <label>*Length of Evaluation</label>
    <length>55</length>
    <type>Text</type>
</CustomField>