fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Lines_referred_to_IR__c.field-meta.xml
<CustomField>
    <fullName>Lines_referred_to_IR__c</fullName>
    <inlineHelpText>% of lines referred to IR</inlineHelpText>
    <label>% Lines  referred to IR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>