fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/List_members_not_mentioned_previously__c.field-meta.xml
<CustomField>
    <fullName>List_members_not_mentioned_previously__c</fullName>
    <label>List members not mentioned previously</label>
    <length>255</length>
    <type>Text</type>
</CustomField>