fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/List_Units_Involved__c.field-meta.xml
<CustomField>
    <fullName>List_Units_Involved__c</fullName>
    <label>List Units Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>