fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Maintain_data_collection_tool_Proc_Log__c.field-meta.xml
<CustomField>
    <fullName>Maintain_data_collection_tool_Proc_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maintain data collection tool/Procedure Log</description>
    <inlineHelpText>Maintain data collection tool/Procedure Log</inlineHelpText>
    <label>Maintain data collection tool/Proc. Log</label>
    <type>Checkbox</type>
</CustomField>