fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Manager_willing_to_set_expectations__c.field-meta.xml
<CustomField>
    <fullName>Manager_willing_to_set_expectations__c</fullName>
    <label>*Manager willing to set expectations?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>