fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_all_in_one__c.field-meta.xml
<CustomField>
    <fullName>Midline_all_in_one__c</fullName>
    <label>*Midline (all-in-one)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>