fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_all_in_one_Size_Length_s__c.field-meta.xml
<CustomField>
    <fullName>Midline_all_in_one_Size_Length_s__c</fullName>
    <label>*Midline (all-in-one) Size/Length(s)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>