fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_all_in_one_Upper_Arm__c.field-meta.xml
<CustomField>
    <fullName>Midline_all_in_one_Upper_Arm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Midline (all-in-one) Upper Arm</label>
    <type>Checkbox</type>
</CustomField>