fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_Insertion_Talk_Track__c.field-meta.xml
<CustomField>
    <fullName>Midline_Insertion_Talk_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Midline Insertion Talk Track − no approval required</description>
    <inlineHelpText>Midline Insertion Talk Track − no approval required</inlineHelpText>
    <label>Midline Insertion Talk Track</label>
    <type>Checkbox</type>
</CustomField>