fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_MST__c.field-meta.xml
<CustomField>
    <fullName>Midline_MST__c</fullName>
    <description>Current Manufacture Midline</description>
    <inlineHelpText>Current Manufacture Midline</inlineHelpText>
    <label>*Midline (MST)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>