fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_Required__c.field-meta.xml
<CustomField>
    <fullName>Midline_Required__c</fullName>
    <label>*Midline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>