fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Midline_Yearly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Midline_Yearly_Volume__c</fullName>
    <label>Midline/Yearly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>