fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/MidlineYrlyVolume__c.field-meta.xml
<CustomField>
    <fullName>MidlineYrlyVolume__c</fullName>
    <description>Current Manufacture Midline/Yrly Volume</description>
    <inlineHelpText>Current Manufacture Midline/Yrly Volume</inlineHelpText>
    <label>*Midline/Yrly Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>