fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Monitor_product_inventory_re_order__c.field-meta.xml
<CustomField>
    <fullName>Monitor_product_inventory_re_order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Monitor product inventory/re-order</description>
    <inlineHelpText>Monitor product inventory/re-order</inlineHelpText>
    <label>Monitor product inventory/re-order</label>
    <type>Checkbox</type>
</CustomField>