fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/MRSA_bacteremia__c.field-meta.xml
<CustomField>
    <fullName>MRSA_bacteremia__c</fullName>
    <label>MRSA bacteremia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>