fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Needle_Guide_Used__c.field-meta.xml
<CustomField>
    <fullName>Needle_Guide_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needle Guide Used</label>
    <type>Checkbox</type>
</CustomField>