fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Needleless_connector_POS_NEG_Neutral__c.field-meta.xml
<CustomField>
    <fullName>Needleless_connector_POS_NEG_Neutral__c</fullName>
    <description>Needleless connector (POS/NEG Neutral)</description>
    <inlineHelpText>Needleless connector (POS/NEG Neutral)</inlineHelpText>
    <label>Needleless connector (POS/NEG Neutral)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>