fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Nitinol_45_cm_wire_vs_stainless__c.field-meta.xml
<CustomField>
    <fullName>Nitinol_45_cm_wire_vs_stainless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nitinol 45 cm wire vs stainless</description>
    <inlineHelpText>Nitinol 45 cm wire vs stainless</inlineHelpText>
    <label>Nitinol 45 cm wire vs stainless</label>
    <type>Checkbox</type>
</CustomField>