fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Non_sterile_PICCs_Sheaths_Slide_Clamps__c.field-meta.xml
<CustomField>
    <fullName>Non_sterile_PICCs_Sheaths_Slide_Clamps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non-sterile PICCs,Sheaths,Slide Clamps</description>
    <inlineHelpText>Non-sterile PICCs,Sheaths,Slide Clamps</inlineHelpText>
    <label>Non-sterile PICCs,Sheaths,Slide Clamps</label>
    <type>Checkbox</type>
</CustomField>