fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Numberofinsertersonteam__c.field-meta.xml
<CustomField>
    <fullName>Numberofinsertersonteam__c</fullName>
    <description>Needs Analysis
Inserter</description>
    <inlineHelpText>Needs Analysis
Inserter</inlineHelpText>
    <label>*Number of inserters on team</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>