fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Nurse_Informatics__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Informatics__c</fullName>
    <description>Nurse Informatics – verify current document practice and what needs to change to incorporate Tip Confirmation.
(Provide sample Blue Bullseye or VPS Rhythm®Device printout)</description>
    <inlineHelpText>Nurse Informatics – verify current document practice and what needs to change to incorporate Tip Confirmation. 
(Provide sample Blue Bullseye or VPS Rhythm®Device printout)</inlineHelpText>
    <label>Nurse Informatics...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>