fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Observe_1_2_cases_VAT_and_1_case_in_IR__c.field-meta.xml
<CustomField>
    <fullName>Observe_1_2_cases_VAT_and_1_case_in_IR__c</fullName>
    <description>Observation Day/Sales
Observe 1–2 cases VAT and 1 case in IR - if applicable</description>
    <inlineHelpText>Observe 1–2 cases VAT and 1 case in IR - if applicable

Observation Day/Sales</inlineHelpText>
    <label>Observe 1–2 cases w/ VAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>