fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Observer_2_to_3_cases_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Observer_2_to_3_cases_with_VAT__c</fullName>
    <label>Observe 2-3 cases with VAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>