fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Obtain_a_copy_of_CLP_and_CMP__c.field-meta.xml
<CustomField>
    <fullName>Obtain_a_copy_of_CLP_and_CMP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obtain a copy of Central Line Procedure and Care and Maintenance Policies</description>
    <inlineHelpText>Obtain a copy of Central Line Procedure and Care and Maintenance Policies</inlineHelpText>
    <label>Obtain a copy of CLP and CMP</label>
    <type>Checkbox</type>
</CustomField>