fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Obtain_copy_PIV_and_Maintenance_Policies__c.field-meta.xml
<CustomField>
    <fullName>Obtain_copy_PIV_and_Maintenance_Policies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obtain a copy of PIV or Midline Care and Maintenance Policies</description>
    <inlineHelpText>Obtain a copy of PIV or Midline Care and Maintenance Policies</inlineHelpText>
    <label>Obtain copy PIV and Maintenance Policies</label>
    <type>Checkbox</type>
</CustomField>