fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Obtain_facility_supplies_provide_CEM__c.field-meta.xml
<CustomField>
    <fullName>Obtain_facility_supplies_provide_CEM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Obtain facility dressing supplies and provide to CEM

Trial/Evaluation Stage
Round Table with the Account/Sales</description>
    <inlineHelpText>Obtain facility dressing supplies and provide to CEM

Trial/Evaluation Stage
Round Table with the Account/Sales</inlineHelpText>
    <label>Obtain facility supplies &amp; provide CEM</label>
    <type>Checkbox</type>
</CustomField>