fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Occluded_midline_s__c.field-meta.xml
<CustomField>
    <fullName>Occluded_midline_s__c</fullName>
    <description>Occluded midline(s)
Trial/Evaluation Stage</description>
    <inlineHelpText>Occluded midline(s)
Trial/Evaluation Stage</inlineHelpText>
    <label>Occluded midline(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>