fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/OccludedPICCs__c.field-meta.xml
<CustomField>
    <fullName>OccludedPICCs__c</fullName>
    <description>Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</description>
    <inlineHelpText>Trial/Evaluation Stage
Round Table with the Account/Clinical
What is facility protocol/procedure for the following?</inlineHelpText>
    <label>Occluded PICC(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>