fullSandbox11072023/force-app/main/default/objects/Winners_Guide__c/fields/Occlusion__c.field-meta.xml
<CustomField>
    <fullName>Occlusion__c</fullName>
    <inlineHelpText>Occlusion % (Intraluminal) Overall PICC related</inlineHelpText>
    <label>Occlusion % (Intraluminal) Overall PICC</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>